[gd_scene load_steps=4 format=3 uid="uid://bwla023akmcbt"]

[ext_resource type="PackedScene" uid="uid://dw12e2yw87frv" path="res://Scenes/card.tscn" id="1_3d14m"]
[ext_resource type="Script" path="res://Scripts/board_game_manager.gd" id="1_3g0o1"]
[ext_resource type="PackedScene" uid="uid://cp6wuud8td67p" path="res://Scenes/player_board.tscn" id="3_ny66l"]

[node name="BoardGame" type="Node2D"]
script = ExtResource("1_3g0o1")

[node name="hero_card" parent="." instance=ExtResource("1_3d14m")]
position = Vector2(584, 544)
rotation = -1.5708
scale = Vector2(0.3, 0.3)
script = null

[node name="companion_card" parent="." instance=ExtResource("1_3d14m")]
position = Vector2(1416, 544)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
script = null

[node name="adventure_card_1" parent="." instance=ExtResource("1_3d14m")]
position = Vector2(792, 544)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
script = null

[node name="adventure_card_2" parent="." instance=ExtResource("1_3d14m")]
position = Vector2(1000, 544)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
script = null

[node name="adventure_card_3" parent="." instance=ExtResource("1_3d14m")]
position = Vector2(1208, 544)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
script = null

[node name="PlayerBoard" parent="." instance=ExtResource("3_ny66l")]
z_index = -1
position = Vector2(1000, 869)

[node name="PlayerBoard2" parent="." instance=ExtResource("3_ny66l")]
z_index = -1
position = Vector2(1000, 220)
rotation = 3.14159
